zabbix-single/base/zabbix-server-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zabbix-server
spec:
  serviceName: zabbix-server-headless
  replicas: 1
  selector: { matchLabels: { app: zabbix-server } }
  template:
    metadata: { labels: { app: zabbix-server } }
    spec:
      terminationGracePeriodSeconds: 300 # Bit higher because of database scheme import on first start.
      containers:
        - name: server
          image: zabbix/zabbix-server-mysql:alpine-7.4-latest
          resources: { requests: { cpu: "500m", memory: "1Gi" }, limits: { cpu: "2", memory: "2Gi" } }
          ports: [{ containerPort: 10051, name: trapper }]
          readinessProbe: { tcpSocket: { port: 10051 }, initialDelaySeconds: 10, periodSeconds: 5 }
          livenessProbe: { exec: { command: ["/bin/sh", "-ec", "/usr/sbin/zabbix_server -R ha_status >/dev/null 2>&1"] }, initialDelaySeconds: 60, periodSeconds: 10, failureThreshold: 3 }
