zabbix-single/base/zabbix-web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  tls:
    - hosts:
      - zabbix.example.local
      secretName: letsencrypt-zabbix-example-local
  rules:
    - host: zabbix.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zabbix-web
                port:
                  number: 80
